--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,9 @@ activityCompose = "1.8.2"
 composeBom = "2023.08.00"
 hilt ="2.50"
 kapt ="1.9.23"
+lottie = "3.4.0"
+lottieCompose = '1.0.0-beta07-2-SNAPSHOT'
+
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -29,6 +32,8 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 
 daggerHiltAndroid = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 daggerHiltCompiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
+lottie = { group = "com.airbnb.android", name = "lottie", version.ref = "lottie"}
+lottieCompose = { group = "com.airbnb.android", name = "lottie-compose", version.ref = "lottieCompose" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
