--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,8 +10,10 @@ activityCompose = "1.8.2"
 composeBom = "2023.08.00"
 hilt ="2.50"
 kapt ="1.9.23"
-lottie = "3.4.0"
+lottie = "6.4.0"
 lottieCompose = '1.0.0-beta07-2-SNAPSHOT'
+appcompanist = "0.11.0"
+compose-util = "0.34.0"
 
 
 [libraries]
@@ -25,6 +27,7 @@ androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", versi
 androidx-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
+androidx-ui-util = { group = "androidx.compose.ui", name = "ui-util", version.ref = "compose-util"}
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
@@ -32,11 +35,18 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 
 daggerHiltAndroid = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 daggerHiltCompiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
+
 lottie = { group = "com.airbnb.android", name = "lottie", version.ref = "lottie"}
 lottieCompose = { group = "com.airbnb.android", name = "lottie-compose", version.ref = "lottieCompose" }
+
+appcompanistInsets = { group = "com.google.accompanist", name = "accompanist-insets", version.ref = "appcompanist"}
+appcompanistPager = { group = "com.google.accompanist", name = "accompanist-pager", version.ref = "appcompanist"}
+appcompanistCoil = { group = "com.google.accompanist", name = "accompanist-pager", version.ref = "appcompanist"}
+
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt" }
+hilt = {id = "com.google.dagger.hilt.android", version.ref = "hilt"}
 
